force-app/main/default/objects/Student_Master_M__c/Student_Master_M__c.object-meta.xml
<CustomObject>
    <label>Student Master M</label>
    <nameField>
        <label>Student Master M Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Master M</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>