force-app/main/default/objects/Student_Master_M__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>