force-app/main/default/objects/Student_Master_M__c/fields/Citized_of_this_country__c.field-meta.xml
<CustomField>
    <fullName>Citized_of_this_country__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Citized of this country</label>
    <type>Checkbox</type>
</CustomField>