force-app/main/default/objects/Student_Master_M__c/validationRules/Date_of_Birth_to_be_lesser_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Birth_to_be_lesser_than_today</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Birth__c  &gt;=  TODAY()</errorConditionFormula>
    <errorMessage>Date of Birth should always be lesser than today.</errorMessage>
</ValidationRule>